--- a/admin/index.html
+++ b/admin/index.html
@@ -71,18 +71,10 @@
               <span>Enable Direct Newznab Queries</span>
               <span class="field-hint">Queries these endpoints alongside the indexer manager. Leave off if you rely solely on Prowlarr/NZBHydra.</span>
             </label>
-            <label>Endpoints (comma separated)
-              <input name="NEWZNAB_ENDPOINTS" type="text" placeholder="https://indexer1.example,https://indexer2.example" />
-              <span class="field-hint">Base URLs without trailing slashes. Order must align with API keys and paths below.</span>
-            </label>
-            <label>API Keys (comma separated)
-              <input name="NEWZNAB_API_KEYS" type="text" placeholder="key1,key2" />
-              <span class="field-hint">Provide one key per endpoint in matching order. Leave empty entries if an endpoint needs no key.</span>
-            </label>
-            <label>API Paths (optional, comma separated)
-              <input name="NEWZNAB_API_PATHS" type="text" placeholder="/api,/custom/api" />
-              <span class="field-hint">Defaults to /api for any blank entries. Full URLs accepted; only path portion is used.</span>
-            </label>
+            <div id="newznab-indexers-list">
+              <!-- Dynamic rows will be inserted here -->
+            </div>
+            <button type="button" id="addNewznabIndexer" class="secondary">Add Indexer</button>
             <label class="checkbox">
               <input name="NEWZNAB_FILTER_NZB_ONLY" type="checkbox" />
               <span>Filter to NZB URLs Only</span>
