tweak add-to-stremio behaviour
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/admin/index.html
+++ b/admin/index.html
@@ -267,6 +267,10 @@
         <section class="group">
           <h3>Addon Metadata</h3>
           <div class="field-grid">
+            <label>Addon Display Name
+              <input name="ADDON_NAME" type="text" placeholder="UsenetStreamer" />
+              <span class="field-hint">Appears in Stremio as the addon title.</span>
+            </label>
             <label>Public Base URL
               <input name="ADDON_BASE_URL" type="url" placeholder="https://example.com" />
             </label>
@@ -284,17 +288,15 @@
       </form>
 
       <div class="manifest-row">
-        <div>
+        <div class="manifest-info">
           <strong>Manifest URL</strong>
           <p id="manifestDescription" class="hint">Add this URL to Stremio once HTTPS and token are set.</p>
-        </div>
-        <div class="manifest-link">
           <a id="manifestLink" href="#" target="_blank" rel="noopener">Not configured</a>
-          <button type="button" id="copyManifest" class="icon-button" aria-label="Copy manifest URL" disabled>
-            <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false">
-              <path d="M8 3h9a2 2 0 0 1 2 2v11h-2V5H8V3zm-3 4h9a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V9a2 2 0 0 1 2-2zm0 2v10h9V9H5z" />
-            </svg>
-          </button>
+        </div>
+        <div class="manifest-actions">
+          <button type="button" class="secondary" id="installStremioWeb" disabled>Install via Stremio Web</button>
+          <button type="button" class="secondary" id="installStremioApp" disabled>Open in Stremio App</button>
+          <button type="button" class="secondary" id="copyManifest" disabled>Copy Manifest URL</button>
           <span id="copyManifestStatus" class="copy-status" aria-live="polite"></span>
         </div>
       </div>
