Improve buttons to install manifgest
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/admin/index.html
+++ b/admin/index.html
@@ -290,8 +290,7 @@
       <div class="manifest-row">
         <div class="manifest-info">
           <strong>Manifest URL</strong>
-          <p id="manifestDescription" class="hint">Add this URL to Stremio once HTTPS and token are set.</p>
-          <a id="manifestLink" href="#" target="_blank" rel="noopener">Not configured</a>
+          <p id="manifestDescription" class="hint">Use the buttons to copy or install the addon once HTTPS and your token are set.</p>
         </div>
         <div class="manifest-actions">
           <button type="button" class="secondary" id="installStremioWeb" disabled>Install via Stremio Web</button>
