Complete stream visibility filter
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/admin/index.html
+++ b/admin/index.html
@@ -266,10 +266,10 @@
             <label>Stream Visibility
               <select name="NZB_HEALTH_VISIBILITY">
                 <option value="all">Show all results</option>
-                <option value="hide_bad">Hide known-bad results</option>
-                <option value="instant_only">Instant &amp; verified only</option>
+                <option value="hide_bad">Hide known-bad results (show unknown results)</option>
+                <option value="good_only">Healthy results only</option>
               </select>
-              <span class="field-hint">Show everything, hide unhealthy releases, or show only instant/verified releases.</span>
+              <span class="field-hint">Show everything, hide unhealthy releases, or keep only healthy ones.</span>
             </label>
           </div>
         </section>
