--- a/admin/index.html
+++ b/admin/index.html
@@ -345,6 +345,39 @@
           </div>
         </section>
 
+        <section class="group">
+          <h3>Stream Naming</h3>
+          <p class="hint">Customize how streams appear in Stremio. Leave blank to use the default.</p>
+          <div class="field-grid">
+            <label class="wide-field">Stream Label Pattern (Short Name)
+              <textarea name="NZB_DISPLAY_NAME_PATTERN" class="pattern-input" rows="2" placeholder='[{addon.name}{service.cached::istrue[" ✅"||""]}] {stream.quality} - {stream.indexer}'></textarea>
+              <span class="field-hint">The short name shown in the list.</span>
+            </label>
+            <label class="wide-field">Description Pattern (Long Title)
+              <textarea name="NZB_NAMING_PATTERN" class="pattern-input" rows="6" placeholder='{stream.source::exists[&quot;🎥 {stream.source} &quot;||&quot;&quot;]}...{stream.resolution::exists[&quot;\n🎞️ {stream.resolution}&quot;||&quot;&quot;]}{stream.audioTags::exists[&quot;\n🎧 {stream.audioTags}&quot;||&quot;&quot;]}{stream.size::exists[&quot;\n📦 {stream.size}&quot;||&quot;&quot;]}{stream.language::exists[&quot;\n🌎 {stream.language}&quot;||&quot;&quot;]}{stream.indexer::exists[&quot;\n🏢 {stream.indexer}&quot;||&quot;&quot;]}{stream.cached::istrue["\n⚡ Cached&quot;||&quot;&quot;]}{stream.filename::exists[&quot;\n📄 {stream.filename}&quot;||&quot;&quot;]}'></textarea>
+              <span class="field-hint">Supports <strong>AIOStreams</strong> naming templates. <br>
+              Available modifiers: <code>::exists</code>, <code>::istrue</code>, <code>::isfalse</code>, <code>::upper</code>, <code>::replace</code>, etc.<br>
+              Use <code>stream.resolution</code>, <code>stream.size</code>, <code>stream.audioTags</code>, etc.</span>
+            </label>
+            <div class="wide-field preview-card">
+              <div class="preview-header">
+                <span>Live Preview</span>
+                <span>EXAMPLE</span>
+              </div>
+              <div class="preview-item">
+                <span class="preview-label" id="previewShortName">[UsenetStreamer ✅] 4K - NZBGeek</span>
+                <div class="preview-desc" id="previewDescription">🎥 WEB-DL 🎞️ x265
+📺 HDR | DV
+🎧 Atmos DDP5.1
+👥 FLUX
+📦 15.4 GB
+🌎 English
+📄 Dune.Part.Two.2024.2160p.WEB-DL.DDP5.1.Atmos.DV.HDR10.H.265-FLUX.mkv</div>
+              </div>
+            </div>
+          </div>
+        </section>
+
         <section class="group" id="nzbdavGroup">
           <h3>NZBDav Connection</h3>
           <div class="field-grid">
@@ -589,6 +622,7 @@
       <p class="support-note">If you like this addon, please consider <a href="https://buymeacoffee.com/gaikwadsank" target="_blank" rel="noopener">buying me a coffee</a>.</p>
     </section>
   </main>
+  <script src="/utils/templateEngine.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
