Visual tag filtering

--- a/admin/index.html
+++ b/admin/index.html
@@ -332,6 +332,10 @@
                   <code>aac, ac3, eac3, mp3, flac, truehd, atmos, dts lossy, dts lossless, dd</code>
                 </div>
                 <div class="example-category">
+                  <h4>Visual Tags</h4>
+                  <code>hdr, hdr10, hdr10+, dv, sdr, 3d, 10bit, 8bit</code>
+                </div>
+                <div class="example-category">
                   <h4>Flags</h4>
                   <code>hardcoded, proper, repack, hdr, extended, remastered, unrated, remux, retail</code>
                 </div>
